# zeroclaw-plugins

./: .gitignore  README.md  registry.json
.github/workflows/: publish.yml
incubating/mastodon-post/: README.md
incubating/wikipedia-summary/: README.md
plugins/depin-attest/: Cargo.toml  LICENSE  README.md  manifest.toml
plugins/depin-attest/src/: lib.rs  memo.rs  nonce.rs  provenance.rs  reading.rs  rpc.rs  tx.rs
plugins/depin-attest/tests/: memo.rs  orchestration.rs  provenance.rs  reading.rs  tx.rs  verify_constants.rs
plugins/dingtalk/: Cargo.toml  README.md  manifest.toml
plugins/dingtalk/src/: dingtalk.rs  lib.rs
plugins/dingtalk/tests/: dingtalk.rs
plugins/token-risk-check/: Cargo.toml  LICENSE  README.md  manifest.toml
plugins/token-risk-check/src/: extensions.rs  lib.rs  program.rs  risk.rs  rpc.rs
plugins/token-risk-check/tests/: extensions.rs  program.rs  real_fixtures.rs  rpc.rs  transport.rs
plugins/token-risk-check/tests/fixtures/: real_mint_14Tqdo.json  real_mint_usdc.json
tools/: build-registry.sh
