[package]
name = "depin-attest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2.2", default-features = false, features = ["fast"] }
base64 = "0.22.1"
bs58 = "0.5.1"

[dev-dependencies]
hex = "0.4.3"
rand = "0.10.2"
