# Standalone crate (own [workspace]): built for wasm32-wasip2 as a channel
# plugin component; the pure dingtalk core (rlib) is host-tested with plain
# cargo test. HTTP and WebSocket transport dependencies are WASM-only.
[package]
name = "dingtalk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "DingTalk Stream Mode channel plugin for ZeroClaw: gateway WebSocket + session-webhook replies."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"

[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
